--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 authors = ["Lokathor <zefria@gmail.com>"]
 edition = "2018"
 description = "A cargo plugin to help ease the process of GBA game creation."
-repsitory = "https://github.com/rust-console/cargo-gba"
+repository = "https://github.com/rust-console/cargo-gba"
 readme = "README.md"
 keywords = ["gba"]
 categories = ["development-tools::build-utils","development-tools::cargo-plugins"]
